# libidl

./: .gitignore  README.md  conanfile.txt
src/: CMakeLists.txt
src/libidl/: CMakeLists.txt
src/libidl/include/idl/: atom.h  atom_type.h  code_gen_src.h  code_generator.h  constraint.h  generic_formatter.h  idl.h  opcode_type.h  slot.h  specification.h
src/libidl/include/idl/internal/: python_utils.h
src/libidl/resources/: code_gen.py
src/libidl/src/: atom.cpp  atom_type.cpp  atom_type.h  code_generator.cpp  constraint.cpp  opcode_type.cpp  python_utils.cpp  slot.cpp  specification.cpp
src/libidl/test/: app.cpp
src/solver/: CMakeLists.txt
src/solver/include/solver/: BackendClasses.hpp  BackendDirectClasses.hpp  BackendSelectors.hpp  BackendSpecializations.hpp  CustomPasses.hpp  FunctionWrap.hpp  GraphEngine.hpp  Solution.hpp  Solver.hpp  harness.hpp
src/solver/src/: BackendCollect.cpp  BackendDominate.cpp  BackendEdge.cpp  BackendIncomingValue.cpp  BackendOrdering.cpp  BackendSameSets.cpp  BackendSingle.cpp  BackendSpecializations.cpp  FunctionWrap.cpp  Solution.cpp  Solver.cpp
